--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-  body {
+  /* body {
     background-color: hsl(0, 0%, 8%);
     font-family: "Inter", sans-serif;
   }
@@ -51,7 +51,6 @@
   }
 
   .links{
-    /* margin-bottom: 15px; */
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -91,5 +90,117 @@
       font-size: 16px;
       padding: 12px;
       width: 300px;
+  }
+} */
+
+body {
+  background-color: hsl(0, 0%, 8%);
+  font-family: "Inter", sans-serif;
+}
+
+.content {
+  background-color: hsl(0, 0%, 12%);
+  width: 90%; 
+  max-width: 300px; 
+  margin: 40px auto;
+  height: fit-content;
+  color: hsl(0, 0%, 100%);
+  border-radius: 8px;
+  padding: 25px;
+  display: flex;
+  flex-direction: column;
+  align-items: center; 
+}
+
+.img img {
+  margin-top: 10px;
+  border-radius: 50%;
+  max-width: 100px;
+  max-height: 150px;
+  width: auto;
+  height: auto;
+}
+
+.name-info {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.name-info p {
+  margin-block-start: 0;
+  margin-block-end: 0;
+}
+
+.name-info .name {
+  font-size: 24px;
+  margin-top: 20px;
+  margin-bottom: 5px;
+}
+
+.name-info .name-city {
+  color: hsl(75, 94%, 57%);
+  font-weight: 600;
+  font-size: 14px;
+  margin-bottom: 24px;
+}
+
+.name-info .name-area {
+  font-size: 14px;
+}
+
+.links {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: 100%;
+}
+
+a {
+  font-size: 14px;
+  text-decoration: none;
+  color: hsl(0, 0%, 100%);
+  background-color: hsl(0, 0%, 20%);
+  text-align: center;
+  align-items: center;
+  border-radius: 5px;
+  padding: 8px;
+}
+
+a:hover {
+  background-color: hsl(0, 0%, 8%);
+}
+
+@media (min-width: 1440px) {
+  .content {
+    max-width: 600px; 
+    padding: 40px;
+  }
+
+  .name-info .name {
+    font-size: 32px;
+  }
+
+  .img img {
+    max-width: 150px;
+  }
+
+  a {
+    font-size: 16px;
+    padding: 12px;
+    width: auto;
+  }
+}
+
+@media (max-width: 768px) {
+  .content {
+    padding: 20px;
+  }
+
+  .name-info .name {
+    font-size: 20px;
+  }
+
+  a {
+    padding: 10px;
   }
 }
